--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,21 +1,26 @@
-name: "JFrog CLI Example"
-on: push
-
+name: deploy package
+on:
+  push:
+    branches:
+      - Add-python-example
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+
       - name: Setup JFrog CLI
-        uses: jfrog/setup-jfrog-cli@v1
+        uses: jfrog/setup-jfrog-cli@v2
         env:
           JF_ARTIFACTORY_SERVER: ${{ secrets.JF_ARTIFACTORY_SERVER_1 }}
-      - name: Run JFrog CLI
+
+      - name: build and publish python project
         run: |
-          # Collect environment variables for the build
-          jfrog rt bce
-          # Collect VCS details from git and add them to the build
-          jfrog rt bag
-          # Publish build info
-          jfrog rt bp
+          jfrog rt pip-config --repo-resolve default-pypi --server-id-resolve artifactory-server1   
+          jfrog rt bce my-new-pip-build 1
+          jfrog rt bp my-new-pip-build 1
+          jfrog rt pipi -r requirements.txt --build-name=my-new-pip-build --build-number=1 --module=test
+          python setup.py sdist bdist_wheel
+          jfrog rt u dist/ default-pypi/simple/ --build-name=my-new-pip-build --build-number=1 --module=test
+          pip show jfrog-python-example
